# remote-fingerprint-erpnext

./: README.md  pyproject.toml
fingerprint/: hooks.py
fingerprint/api/: fetch_checkins.py  get_fingerprint_data.py  mark_attendance.py  read_file_from_server.py  run_python.bat
fingerprint/fingerprint/doctype/fingerprint_config/: fingerprint_config.js  fingerprint_config.json  fingerprint_config.py  test_fingerprint_config.py
fingerprint/fingerprint/web_form/media_applicant_test/: media_applicant_test.json
fingerprint/fixtures/: client_script.json  custom_field.json  property_setter.json  server_script.json
