[project]
name = "fingerprint"
authors = [
    { name = "Mahmod Aldahol", email = "mahmodaldahol010@gmail.com"}
]
description = "An ERPnext app the get data from fingerprint devices and store them in ERPnext system"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    # "frappe~=15.0.0" # Installed and managed by bench.
    "pyzk~=0.9",
    "pickleDB~=1.3.2",
    "requests~=2.32.3"
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

# These dependencies are only installed when developer mode is enabled
[tool.bench.dev-dependencies]
# package_name = "~=1.1.0"
